# bSDD-Toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  example.json  main.spec  output.json  pyproject.toml  pytest.ini  som-0.2.0.json  test.ipynb  test.py
src/bsdd_gui/: CLAUDE.md  __init__.py  __main__.py  _add_module.py  _create_translation_pyproject.py  main_window.py  pyproject.toml
src/bsdd_gui/core/: ai_helper.py  allowed_values_table.py  allowed_values_table_view.py  allowed_values_view.py  class_editor.py  class_editor_widget.py  class_property_editor.py  class_property_editor_widget.py  class_property_table.py  class_property_table_view.py  class_tree.py  class_tree_view.py  console_widget.py  dictionary_editor.py  dictionary_editor_widget.py  download.py  excel.py  file_lock.py  graph_view_widget.py  group_of_properties.py  ids_exporter.py  iso_export.py  language.py  logging.py  loin.py  main_window.py  main_window_widget.py  plugins.py  project.py  property_editor.py  property_editor_widget.py  property_picker.py  property_set_list.py  property_set_table.py  property_set_table_view.py  property_table.py  property_table_widget.py  property_widget.py  relationship_editor.py  relationship_editor_widget.py  (+9 more)
src/bsdd_gui/module/ai_helper/: __init__.py  constants.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/allowed_values_table/: __init__.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/allowed_values_table_view/: __init__.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/allowed_values_view/: __init__.py  models.py  prop.py
src/bsdd_gui/module/appdata/: __init__.py  prop.py  trigger.py
src/bsdd_gui/module/class_editor/: __init__.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/class_editor_widget/: __init__.py  constants.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/class_property_editor/: __init__.py  constants.py  prop.py  trigger.py  ui.py  views.py
src/bsdd_gui/module/class_property_editor_widget/: __init__.py  constants.py  prop.py  trigger.py  ui.py  views.py
src/bsdd_gui/module/class_property_table/: __init__.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/class_property_table_view/: __init__.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/class_tree/: __init__.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/class_tree_view/: __init__.py  constants.py  models.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/console/: __init__.py  trigger.py
src/bsdd_gui/module/console_widget/: __init__.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/dictionary_editor/: __init__.py  constants.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/dictionary_editor_widget/: __init__.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/download/: __init__.py  constants.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/excel/: __init__.py  constants.py  prop.py  trigger.py  ui.py
src/bsdd_gui/module/file_lock/: __init__.py  prop.py  trigger.py
src/bsdd_gui/module/graph_view_widget/: __init__.py  calculation.py  constants.py  edge_type_settings.py  graphics_items.py  physics.py  prop.py  settings_widget.py  trigger.py  ui.py  view.py  (+2 more)
src/bsdd_gui/plugins/: _add_module.py
src/bsdd_gui/presets/: _add_widget_module.py  models_presets.py  prop_presets.py  signal_presets.py  tool_presets.py  view_presets.py
src/bsdd_gui/resources/: __init__.py
src/bsdd_gui/tests/: conftest.py  test_ai_helper.py  test_allowed_values_table_view.py  test_appdata.py  test_class_editor_widget.py  test_class_property_editor_widget.py  test_class_property_table_view.py  test_class_tree_view.py  test_dictionary_editor_widget.py  test_download.py  test_file_lock.py  test_group_of_properties.py  test_ids_exporter.py  test_ifc_helper.py  test_language.py  test_logging_module.py  test_main_window_widget.py  test_plugins.py  test_popups.py  test_project.py  test_property_editor_widget.py  test_property_set_table_view.py  test_property_table_widget.py  test_relationship_editor_widget.py  test_search_widget.py  test_settings_widget.py  test_theme.py  test_undo.py  test_util.py  test_window_geometry.py
src/bsdd_gui/tool/: __init__.py  ai_helper.py  allowed_values_table.py  allowed_values_table_view.py  allowed_values_view.py  appdata.py  class_editor.py  class_editor_widget.py  class_property_editor.py  class_property_editor_widget.py  class_property_table.py  class_property_table_view.py  class_tree.py  class_tree_view.py  console.py  console_widget.py  dictionary_editor.py  dictionary_editor_widget.py  download.py  excel.py  file_lock.py  graph_view_widget.py  group_of_properties.py  ids_exporter.py  ifc_helper.py  iso_export.py  language.py  logging.py  loin.py  main_window.py  main_window_widget.py  plugins.py  popups.py  project.py  property_editor.py  property_editor_widget.py  property_picker.py  property_set_list.py  property_set_table.py  property_set_table_view.py  (+14 more)
src/bsdd_json/: __init__.py  models.py  pyproject.toml  type_hints.py
src/bsdd_json/tests/: conftest.py  helpers.py  test_dict_utils.py  test_pydantic_models.py
src/bsdd_json/utils/: bsdd_class.py  bsdd_class_property.py  cache.py  class_utils.py  dictionary_utils.py  property_utils.py
(+387 files in other folders)
