[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsdd_gui"
version = "0.3.0"
description = "bSDD GUI"
requires-python = ">=3.10"
authors = [{ name = "Christoph Mellüh" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7",
  "rich>=13",
  "PySide6>=6.7",
  "bsdd",
  "appdirs",
  "pyqtconsole",
  "thefuzz",
  "bsdd_json>=0.1.1",
  "ifctester",
  "qtawesome",
  "ifcopenshell",
  "openai",
  "jinja2>=3.1.6",
  "openpyxl>=3.1.5",
  "pydantic-xml>=2.19.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt", "mypy", "ruff", "black", "pyinstaller","qtawesome", "jupyter>=1.1.1"]

[project.scripts]
bsdd-gui = "bsdd_gui.__main__:main"

[tool.setuptools]
packages = ["bsdd_gui"]
package-dir = { bsdd_gui = "." }

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

