[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsdd_json"
version = "0.1.2"
description = "bSDD JSON data models and utilities"
requires-python = ">=3.10"
authors = [{ name = "Christoph Mellüh" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7",
  "bsdd",
]

[tool.setuptools]
packages = [
  "bsdd_json",
  "bsdd_json.utils",
]
package-dir = { bsdd_json = "." }


[tool.ruff]
line-length = 150
target-version = "py310"
src = ["gis2bim"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103","D100","D104"]
pylint.max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101","D101","D102"]